--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "cloudinary-react": "^1.8.1",
+    "cypress": "^13.1.0",
     "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
