--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src"],   //"cypress",
   "references": [{ "path": "./tsconfig.node.json" }]
 }
