--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.11.2",
     "@faker-js/faker": "^8.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.1.1",
     "@types/faker": "^6.6.9",
     "@types/react-highlight-words": "^0.16.4",
+    "@types/react-redux": "^7.1.26",
     "antd": "^5.8.4",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
@@ -32,6 +34,7 @@
     "react-highlight-words": "^0.20.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
