--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "stripe": "^13.4.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "node-cron": "^3.0.2",
+    "redis": "^4.6.8",
+    "redis-om": "^0.4.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -38,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.6",
-    "@types/node-cron": "^3.0.8"
+    "@types/node-cron": "^3.0.8",
+    "jest": "^29.6.4"
   }
 }
