--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
