--- a/server/package.json
+++ b/server/package.json
@@ -27,13 +27,13 @@
     "moment": "^2.29.4",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
+    "redis": "^4.6.8",
+    "redis-om": "^0.4.2",
     "socket.io": "^4.7.2",
     "stripe": "^13.4.0",
-    "uuid": "^9.0.0",
-    "node-cron": "^3.0.2",
-    "redis": "^4.6.8",
-    "redis-om": "^0.4.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -42,7 +42,6 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.6",
-    "@types/node-cron": "^3.0.8",
-    "jest": "^29.6.4"
+    "@types/node-cron": "^3.0.8"
   }
 }
